# hypr-agentic-training

./: .cursorrules  .gitignore  DEPLOYMENT.md  JOURNAL.md  LICENSE  OAUTH-SETUP-GUIDE.md  README.md  REMAINING-TASKS.md  SECURITY-IMPLEMENTATION.md  SECURITY.md  deploy-railway.sh  railway.json  setup-dev.sh  test-cors.html  test-oauth.html  web-api-example-specs.md
.beads/: metadata.json
changes/: 001-application-timestamps.md  002-user-timezone.md
config-service/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  setup-db.sql
config-service-dotnet/: .dockerignore  .gitignore  ConfigService.sln  Dockerfile  Makefile  README.md  SECURITY-IMPLEMENTATION.md  appsettings.Production.json  run.sh
config-service/migrations/: 001_create_migrations_table.sql  002_create_applications_table.sql  003_create_configurations_table.sql
config-service/src/config_service/: __init__.py  config.py  config_test.py  main.py  main_test.py
config-service/src/config_service/database/: connection.py  connection_test.py  migrations.py  migrations_test.py
config-service/src/config_service/models/: __init__.py  application.py  application_test.py  configuration.py  configuration_test.py
config-service/src/config_service/repositories/: __init__.py  application_repository.py  application_repository_test.py
config-service/src/config_service/routers/: applications.py  applications_test.py
memory/: ABOUT.md  ARCHITECTURE.md  DOMAIN.md  ENV_SCRIPTS.md  TECHNICAL.md  WORKFLOW_STATUS.md
prompts/: 1-web-api-specs.md  2-web-api-prompt.md  3-web-api-plan.md  5-admin-ui-plan.md  (+1 more)
(+93 files in other folders)
