[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "config-service"
version = "0.1.0"
description = "Configuration API Service"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi==0.116.1",
    "pydantic==2.11.7",
    "pydantic-settings>=2.0.0,<3.0.0",
    "pydantic-extra-types>=2.0.0,<3.0.0",
    "python-ulid>=2.0.0,<3.0.0",
    "psycopg2==2.9.10",
    "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.4.1",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[dependency-groups]
test = [
    "pytest-asyncio>=1.3.0",
]
